--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	<li><a href="05/">【Chapter5】日付や時間の取り扱い【82〜93】</a></li>
 	<li><a href="06/">【Chapter6】ブラウザーの操作方法【94〜112】</a></li>
 	<li><a href="07/">【Chapter7】ユーザーアクションの取り扱い【113〜134】</a></li>
-	<li><a href="08/">【Chapter8】【〜】</a></li>
-	<li><a href="09/">【Chapter9】【〜】</a></li>
+	<li><a href="08/">【Chapter8】HTML要素の操作方法【135〜160】</a></li>
+	<li><a href="09/">【Chapter9】フォーム要素の操作方法【161〜179】</a></li>
 	<li><a href="10/">【Chapter10】【〜】</a></li>
 	<li><a href="11/">【Chapter11】【〜】</a></li>
 	<li><a href="12/">【Chapter12】【〜】</a></li>
