--- a/01/index.html
+++ b/01/index.html
@@ -10,7 +10,8 @@
 	<link rel="stylesheet" href="../css/base.css" media="all">
 	<!--js-->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script src="../js/01.js"></script>
+	<p id="top"><a href="../index.html">TOPに戻る</a></p>
+<script src="../js/01.js"></script>
 </head>
 <body>
 <h1>【Chapter1】Javascriptの基礎【01〜19】</h1>
