--- a/02/index.html
+++ b/02/index.html
@@ -533,6 +533,7 @@ decodeURIComponent('文字列')    //文字列をデコードする
 </code></pre>
 </section><!-- section -->
 
+<p id="top"><a href="../index.html">TOPに戻る</a></p>
 <script src="../js/02.js"></script>
 </body>
 </html>
