--- a/03/index.html
+++ b/03/index.html
@@ -792,6 +792,7 @@ console.log(Object.isFrozen(obj));    //true（不可能になってる）
 </code></pre>
 </section><!-- section -->
 
+<p id="top"><a href="../index.html">TOPに戻る</a></p>
 <script src="../js/03.js"></script>
 </body>
 
