--- a/05/index.html
+++ b/05/index.html
@@ -514,7 +514,8 @@ const timerId = setInterval(() => {
 			transform-origin: bottom;
 		}
 	</style>
-	<script src="../js/05.js"></script>
+	<p id="top"><a href="../index.html">TOPに戻る</a></p>
+<script src="../js/05.js"></script>
 </body>
 
 </html>
