--- a/06/index.html
+++ b/06/index.html
@@ -571,7 +571,8 @@ window.addEventListener('offline', () => {
 </section><!-- section -->
 
 
-	<script src="../js/06.js"></script>
+	<p id="top"><a href="../index.html">TOPに戻る</a></p>
+<script src="../js/06.js"></script>
 </body>
 
 </html>
