--- a/08/index.html
+++ b/08/index.html
@@ -785,7 +785,8 @@ btn160.addEventListener('click', () => {
 </section><!-- section -->
 
 
-	<script src="../js/08.js"></script>
+	<p id="top"><a href="../index.html">TOPに戻る</a></p>
+<script src="../js/08.js"></script>
 </body>
 
 </html>
