--- a/07/index.html
+++ b/07/index.html
@@ -1129,7 +1129,8 @@ box.addEventListener('drop', () => {
 </section><!-- section -->
 
 
-	<script src="../js/07.js"></script>
+	<p id="top"><a href="../index.html">TOPに戻る</a></p>
+<script src="../js/07.js"></script>
 </body>
 
 </html>
