--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="robots" content="noindex">
-	<title>【js_01】基礎</title>
+	<title>js2019</title>
 	<!--css-->
 	<link rel="stylesheet" href="css/base.css" media="all">
 	<style>body {text-align: center; padding-top: 80px;}ol{display: inline-block;}li{text-align: left; margin-bottom: 20px;}a{display: inline-block;}</style>
